symphony_model_checker/parser/SymphonyParser.py
# Generated from Symphony.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SymphonyParser ( Parser ):

    grammarFileName = "Symphony.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'and'", "'or'", "'&'", "'|'", "'^'", 
                     "'-'", "'+'", "'//'", "'/'", "'%'", "'mod'", "'**'", 
                     "'<<'", "'>>'", "'=='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "'=>'", "'~'", "'?'", "'!'", "'abs'", "'all'", 
                     "'any'", "'bin'", "'choose'", "'dict'", "'get_context'", 
                     "'get_ident'", "'hash'", "'hex'", "'int'", "'keys'", 
                     "'len'", "'list'", "'max'", "'min'", "'oct'", "'reversed'", 
                     "'set'", "'sorted'", "'str'", "'sum'", "'type'", "'zip'", 
                     "'end'", "'and='", "'or='", "'=>='", "'&='", "'|='", 
                     "'^='", "'-='", "'+='", "'*='", "'/='", "'//='", "'%='", 
                     "'mod='", "'**='", "'>>='", "'<<='", "<INVALID>", "<INVALID>", 
                     "'#'", "'(*'", "'*)'", "'*'", "'as'", "'.'", "'import'", 
                     "'print'", "'from'", "'..'", "'setintlevel'", "'save'", 
                     "'stop'", "'lambda'", "'not'", "','", "'const'", "'await'", 
                     "'assert'", "'var'", "'trap'", "'pass'", "'del'", "'spawn'", 
                     "'finally'", "'invariant'", "'go'", "'builtin'", "'sequential'", 
                     "'when'", "'let'", "'if'", "'elif'", "'else'", "'@'", 
                     "'while'", "'global'", "'def'", "'returns'", "'exists'", 
                     "'where'", "'='", "'for'", "'in'", "':'", "'None'", 
                     "'atomically'", "<INVALID>", "'eternal'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'['", "']'", "'{'", "'}'", "'('", "')'", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "NL", "WS", "COMMENT_START", 
                      "OPEN_MULTI_COMMENT", "CLOSE_MULTI_COMMENT", "STAR", 
                      "AS", "DOT", "IMPORT", "PRINT", "FROM", "RANGE", "SETINTLEVEL", 
                      "SAVE", "STOP", "LAMBDA", "NOT", "COMMA", "CONST", 
                      "AWAIT", "ASSERT", "VAR", "TRAP", "PASS", "DEL", "SPAWN", 
                      "FINALLY", "INVARIANT", "GO", "BUILTIN", "SEQUENTIAL", 
                      "WHEN", "LET", "IF", "ELIF", "ELSE", "AT", "WHILE", 
                      "GLOBAL", "DEF", "RETURNS", "EXISTS", "WHERE", "EQ", 
                      "FOR", "IN", "COLON", "NONE", "ATOMICALLY", "BOOL", 
                      "ETERNAL", "INT", "NAME", "ATOM", "ARROWID", "HEX_INTEGER", 
                      "OPEN_BRACK", "CLOSE_BRACK", "OPEN_BRACES", "CLOSE_BRACES", 
                      "OPEN_PAREN", "CLOSE_PAREN", "SEMI_COLON", "STRING", 
                      "INDENT", "DEDENT" ]

    RULE_program = 0
    RULE_import_stmt = 1
    RULE_import_name = 2
    RULE_import_from = 3
    RULE_import_names_seq = 4
    RULE_tuple_bound = 5
    RULE_bound = 6
    RULE_arith_op = 7
    RULE_unary_op = 8
    RULE_basic_expr = 9
    RULE_set_rule = 10
    RULE_iter_parse = 11
    RULE_for_parse = 12
    RULE_where_parse = 13
    RULE_tuple_rule = 14
    RULE_nary_expr = 15
    RULE_expr_rule = 16
    RULE_application = 17
    RULE_expr = 18
    RULE_assign_op = 19
    RULE_aug_assign_op = 20
    RULE_expr_stmt = 21
    RULE_assign_stmt = 22
    RULE_aug_assign_stmt = 23
    RULE_const_assign_stmt = 24
    RULE_assert_stmt = 25
    RULE_await_stmt = 26
    RULE_var_stmt = 27
    RULE_trap_stmt = 28
    RULE_pass_stmt = 29
    RULE_finally_stmt = 30
    RULE_invariant_stmt = 31
    RULE_del_stmt = 32
    RULE_spawn_stmt = 33
    RULE_go_stmt = 34
    RULE_print_stmt = 35
    RULE_sequential_stmt = 36
    RULE_global_stmt = 37
    RULE_builtin_stmt = 38
    RULE_sequential_names_seq = 39
    RULE_atomic_block = 40
    RULE_for_block = 41
    RULE_let_decl = 42
    RULE_when_decl = 43
    RULE_let_when_decl = 44
    RULE_let_when_block = 45
    RULE_opt_returns = 46
    RULE_method_decl = 47
    RULE_while_block = 48
    RULE_elif_block = 49
    RULE_else_block = 50
    RULE_if_block = 51
    RULE_block_stmts = 52
    RULE_block = 53
    RULE_normal_block = 54
    RULE_simple_stmt = 55
    RULE_compound_stmt = 56
    RULE_one_line_stmt = 57
    RULE_label = 58
    RULE_stmt = 59

    ruleNames =  [ "program", "import_stmt", "import_name", "import_from", 
                   "import_names_seq", "tuple_bound", "bound", "arith_op", 
                   "unary_op", "basic_expr", "set_rule", "iter_parse", "for_parse", 
                   "where_parse", "tuple_rule", "nary_expr", "expr_rule", 
                   "application", "expr", "assign_op", "aug_assign_op", 
                   "expr_stmt", "assign_stmt", "aug_assign_stmt", "const_assign_stmt", 
                   "assert_stmt", "await_stmt", "var_stmt", "trap_stmt", 
                   "pass_stmt", "finally_stmt", "invariant_stmt", "del_stmt", 
                   "spawn_stmt", "go_stmt", "print_stmt", "sequential_stmt", 
                   "global_stmt", "builtin_stmt", "sequential_names_seq", 
                   "atomic_block", "for_block", "let_decl", "when_decl", 
                   "let_when_decl", "let_when_block", "opt_returns", "method_decl", 
                   "while_block", "elif_block", "else_block", "if_block", 
                   "block_stmts", "block", "normal_block", "simple_stmt", 
                   "compound_stmt", "one_line_stmt", "label", "stmt" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    NL=66
    WS=67
    COMMENT_START=68
    OPEN_MULTI_COMMENT=69
    CLOSE_MULTI_COMMENT=70
    STAR=71
    AS=72
    DOT=73
    IMPORT=74
    PRINT=75
    FROM=76
    RANGE=77
    SETINTLEVEL=78
    SAVE=79
    STOP=80
    LAMBDA=81
    NOT=82
    COMMA=83
    CONST=84
    AWAIT=85
    ASSERT=86
    VAR=87
    TRAP=88
    PASS=89
    DEL=90
    SPAWN=91
    FINALLY=92
    INVARIANT=93
    GO=94
    BUILTIN=95
    SEQUENTIAL=96
    WHEN=97
    LET=98
    IF=99
    ELIF=100
    ELSE=101
    AT=102
    WHILE=103
    GLOBAL=104
    DEF=105
    RETURNS=106
    EXISTS=107
    WHERE=108
    EQ=109
    FOR=110
    IN=111
    COLON=112
    NONE=113
    ATOMICALLY=114
    BOOL=115
    ETERNAL=116
    INT=117
    NAME=118
    ATOM=119
    ARROWID=120
    HEX_INTEGER=121
    OPEN_BRACK=122
    CLOSE_BRACK=123
    OPEN_BRACES=124
    CLOSE_BRACES=125
    OPEN_PAREN=126
    CLOSE_PAREN=127
    SEMI_COLON=128
    STRING=129
    INDENT=130
    DEDENT=131

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SymphonyParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SymphonyParser.StmtContext)
            else:
                return self.getTypedRuleContext(SymphonyParser.StmtContext,i)


        def getRuleIndex(self):
            return SymphonyParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SymphonyParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SymphonyParser.T__5) | (1 << SymphonyParser.T__21) | (1 << SymphonyParser.T__22) | (1 << SymphonyParser.T__23) | (1 << SymphonyParser.T__24) | (1 << SymphonyParser.T__25) | (1 << SymphonyParser.T__26) | (1 << SymphonyParser.T__27) | (1 << SymphonyParser.T__28) | (1 << SymphonyParser.T__29) | (1 << SymphonyParser.T__30) | (1 << SymphonyParser.T__31) | (1 << SymphonyParser.T__32) | (1 << SymphonyParser.T__33) | (1 << SymphonyParser.T__34) | (1 << SymphonyParser.T__35) | (1 << SymphonyParser.T__36) | (1 << SymphonyParser.T__37) | (1 << SymphonyParser.T__38) | (1 << SymphonyParser.T__39) | (1 << SymphonyParser.T__40) | (1 << SymphonyParser.T__41) | (1 << SymphonyParser.T__42) | (1 << SymphonyParser.T__43) | (1 << SymphonyParser.T__44) | (1 << SymphonyParser.T__45) | (1 << SymphonyParser.T__46) | (1 << SymphonyParser.T__47))) != 0) or ((((_la - 66)) & ~0x3f) == 0 and ((1 << (_la - 66)) & ((1 << (SymphonyParser.NL - 66)) | (1 << (SymphonyParser.IMPORT - 66)) | (1 << (SymphonyParser.PRINT - 66)) | (1 << (SymphonyParser.FROM - 66)) | (1 << (SymphonyParser.SETINTLEVEL - 66)) | (1 << (SymphonyParser.SAVE - 66)) | (1 << (SymphonyParser.STOP - 66)) | (1 << (SymphonyParser.LAMBDA - 66)) | (1 << (SymphonyParser.NOT - 66)) | (1 << (SymphonyParser.CONST - 66)) | (1 << (SymphonyParser.AWAIT - 66)) | (1 << (SymphonyParser.ASSERT - 66)) | (1 << (SymphonyParser.VAR - 66)) | (1 << (SymphonyParser.TRAP - 66)) | (1 << (SymphonyParser.PASS - 66)) | (1 << (SymphonyParser.DEL - 66)) | (1 << (SymphonyParser.SPAWN - 66)) | (1 << (SymphonyParser.FINALLY - 66)) | (1 << (SymphonyParser.INVARIANT - 66)) | (1 << (SymphonyParser.GO - 66)) | (1 << (SymphonyParser.BUILTIN - 66)) | (1 << (SymphonyParser.SEQUENTIAL - 66)) | (1 << (SymphonyParser.WHEN - 66)) | (1 << (SymphonyParser.LET - 66)) | (1 << (SymphonyParser.IF - 66)) | (1 << (SymphonyParser.WHILE - 66)) | (1 << (SymphonyParser.GLOBAL - 66)) | (1 << (SymphonyParser.DEF - 66)) | (1 << (SymphonyParser.FOR - 66)) | (1 << (SymphonyParser.COLON - 66)) | (1 << (SymphonyParser.NONE - 66)) | (1 << (SymphonyParser.ATOMICALLY - 66)) | (1 << (SymphonyParser.BOOL - 66)) | (1 << (SymphonyParser.INT - 66)) | (1 << (SymphonyParser.NAME - 66)) | (1 << (SymphonyParser.ATOM - 66)) | (1 << (SymphonyParser.OPEN_BRACK - 66)) | (1 << (SymphonyParser.OPEN_BRACES - 66)) | (1 << (SymphonyParser.OPEN_PAREN - 66)) | (1 << (SymphonyParser.SEMI_COLON - 66)) | (1 << (SymphonyParser.STRING - 66)))) != 0):
                self.state = 120
                self.stmt()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(SymphonyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self):
            return self.getToken(SymphonyParser.NL, 0)

        def import_name(self):
            return self.getTypedRuleContext(SymphonyParser.Import_nameContext,0)


        def import_from(self):
            return self.getTypedRuleContext(SymphonyParser.Import_fromContext,0)


        def SEMI_COLON(self):
            return self.getToken(SymphonyParser.SEMI_COLON, 0)

        def getRuleIndex(self):
            return SymphonyParser.RULE_import_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_stmt" ):
                return visitor.visitImport_stmt(self)
            else:
                return visitor.visitChildren(self)




    def import_stmt(self):

        localctx = SymphonyParser.Import_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_import_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SymphonyParser.IMPORT]:
                self.state = 128
                self.import_name()
                pass
            elif token in [SymphonyParser.FROM]:
                self.state = 129
                self.import_from()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SymphonyParser.SEMI_COLON:
                self.state = 132
                self.match(SymphonyParser.SEMI_COLON)


            self.state = 135
            self.match(SymphonyParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(SymphonyParser.IMPORT, 0)

        def import_names_seq(self):
            return self.getTypedRuleContext(SymphonyParser.Import_names_seqContext,0)


        def getRuleIndex(self):
            return SymphonyParser.RULE_import_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_name" ):
                return visitor.visitImport_name(self)
            else:
                return visitor.visitChildren(self)




    def import_name(self):

        localctx = SymphonyParser.Import_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_import_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(SymphonyParser.IMPORT)
            self.state = 138
            self.import_names_seq()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_fromContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FROM(self):
            return self.getToken(SymphonyParser.FROM, 0)

        def NAME(self):
            return self.getToken(SymphonyParser.NAME, 0)

        def IMPORT(self):
            return self.getToken(SymphonyParser.IMPORT, 0)

        def STAR(self):
            return self.getToken(SymphonyParser.STAR, 0)

        def import_names_seq(self):
            return self.getTypedRuleContext(SymphonyParser.Import_names_seqContext,0)


        def getRuleIndex(self):
            return SymphonyParser.RULE_import_from

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_from" ):
                return visitor.visitImport_from(self)
            else:
                return visitor.visitChildren(self)




    def import_from(self):

        localctx = SymphonyParser.Import_fromContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_import_from)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(SymphonyParser.FROM)
            self.state = 141
            self.match(SymphonyParser.NAME)
            self.state = 142
            self.match(SymphonyParser.IMPORT)
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SymphonyParser.STAR]:
                self.state = 143
                self.match(SymphonyParser.STAR)
                pass
            elif token in [SymphonyParser.NAME]:
                self.state = 144
                self.import_names_seq()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_names_seqContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(SymphonyParser.NAME)
            else:
                return self.getToken(SymphonyParser.NAME, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SymphonyParser.COMMA)
            else:
                return self.getToken(SymphonyParser.COMMA, i)

        def getRuleIndex(self):
            return SymphonyParser.RULE_import_names_seq

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_names_seq" ):
                return visitor.visitImport_names_seq(self)
            else:
                return visitor.visitChildren(self)




    def import_names_seq(self):

        localctx = SymphonyParser.Import_names_seqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_import_names_seq)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(SymphonyParser.NAME)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SymphonyParser.COMMA:
                self.state = 148
                self.match(SymphonyParser.COMMA)
                self.state = 149
                self.match(SymphonyParser.NAME)
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tuple_boundContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(SymphonyParser.NAME, 0)

        def OPEN_PAREN(self):
            return self.getToken(SymphonyParser.OPEN_PAREN, 0)

        def bound(self):
            return self.getTypedRuleContext(SymphonyParser.BoundContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(SymphonyParser.CLOSE_PAREN, 0)

        def OPEN_BRACK(self):
            return self.getToken(SymphonyParser.OPEN_BRACK, 0)

        def CLOSE_BRACK(self):
            return self.getToken(SymphonyParser.CLOSE_BRACK, 0)

        def getRuleIndex(self):
            return SymphonyParser.RULE_tuple_bound

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTuple_bound" ):
                return visitor.visitTuple_bound(self)
            else:
                return visitor.visitChildren(self)




    def tuple_bound(self):
